# projetL3

./: .gitignore  CMakeLists.txt  CMakeListsP.txt  Exemple_util_Pouvoir.txt  README.md
client/: CMakeLists.txt  main.cpp
client/img/: coordonnees.txt
client/include/: Case.hpp  Grille.hpp  client.hpp  fenetreAccueil.hpp  fenetreJeu.hpp  fenetreLoose.hpp  fenetrePosBateau.hpp  fenetreWin.hpp  gestionGrille.hpp
client/src/: Allemagne.cpp  Bateau.cpp  Case.cpp  France.cpp  Grille.cpp  Japon.cpp  Jeu.cpp  Jeu.hpp  Joueur.cpp  Pays.cpp  Pirates.cpp  Player.cpp  Russie.cpp  aff_elements.cpp  aff_elements.hpp  cin_acceuil.cpp  cin_acceuil.hpp  client.cpp  client.hpp  fenetreAccueil.cpp  fenetreAccueil.hpp  fenetreAttente.cpp  fenetreJeu.cpp  fenetreLoose.cpp  fenetrePays.cpp  fenetrePosBateau.cpp  fenetreWin.cpp  gestionBateau.cpp  gestionGrille.cpp  gestionGrille.hpp  infos.cpp  main.cpp  old_fenetrePosBateau.cpp  pouvoir.cpp  term.cpp
include/: Allemagne.hpp  Bateau.hpp  Case.hpp  France.hpp  Grille.hpp  Japon.hpp  Jeu.hpp  Joueur.hpp  Pays.hpp  Pirates.hpp  Player.hpp  Russie.hpp  client.hpp  fenetreAccueil.hpp  fenetreAttente.hpp  fenetreJeu.hpp  fenetreLoose.hpp  fenetrePays.hpp  fenetrePosBateau.hpp  fenetreWin.hpp  gestionBateau.hpp  gestionGrille.hpp  network.hpp  pouvoir.hpp
serveur/: CMakeLists.txt  default.nix
serveur/include/: Case.hpp  Grille.hpp  Jeu.hpp  network.hpp  server.hpp
serveur/src/: client.cpp  connect.cpp  display.cpp  joueur.cpp  old_server.cpp  packet.cpp  server.cpp  serverbegin.cpp  servergame.cpp  serverloop.cpp  servertransmit.cpp  subserver.cpp  thread.cpp
src/: test.c
